src/App.css
@font-face {
  font-family: Playfair;
  src: url('./assets/fonts/Playfair_Display/static/PlayfairDisplay-Regular.ttf');
}

* {
  box-sizing: border-box;
}

.App {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, 'Times New Roman', Times, serif;
  scroll-behavior: smooth;
  overflow-x: hidden;
}

* {
  box-sizing: border-box;
}

a {
  color: #000;
  text-decoration: none;
}

